Fix overlap in mobile labels example #276

--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -719,48 +719,45 @@ $wai_grey: #333333;
           border: 1px solid $wai_link_active;
         }
       }
-      figure {
-        @include mq($medium) {
-          width: 60%;
+      .row {
+        padding: 0.25em 0;
+        position: relative;
+      }
+      label {
+        width: 100%;
+        display: block;
+        text-align: left;
+      }
+      input {
+        width: 100%;
+      }
+      textarea {
+        width: 100%;
+        height: 5em;
+      }
+      .checkbox {
+        label {
+          width: auto;
+          padding-left: 1.2em;
+        }
+        input {
+          width: auto;
+          position: absolute;
+          top: 0.5em;
         }
       }
-      .pass {
-        .row {
-          padding: 0.25em 0;
-          position: relative;
-          label {
-            width: 33%;
-            display: inline-block;
-            white-space: nowrap;
-          }
-          input {
-            width: 62%;
-          }
-          textarea {
-            width: 62%;
-            height: 5em;
-          }
-          &.checkbox {
-            padding-left: 34%;
-            label {
-              width: auto;
-              white-space: normal;
-              padding-left: 1.2em;
-            }
-            input {
-              width: auto;
-              position: absolute;
-              top: 0.5em;
-            }
-          }
+      @include mq($medium) {
+        width: 35em;
+        label {
+          width: 23%;
+          display: inline-block;
+          text-align: right;
         }
-        @include mq($medium) {
-          label {
-            width: 23%;
-          }
-          input, textarea {
-            width: 73%;
-          }
+        input, textarea {
+          width: 75.5%;
+        }
+        .checkbox {
+          padding-left: 21%;
         }
       }
     }
